--- a/_posts/技术/面试/2022-11-05-面试题.md
+++ b/_posts/技术/面试/2022-11-05-面试题.md
@@ -107,7 +107,7 @@ DNS预解析
 ### 水平居中
 - text-align: center。居中子元素为行内或行内块适用。
 - margin: auto + width。居中元素需要设置具体宽度。
-  - width：fit-content。可以作用在居中元素或居中元素的父元素上。
+- width：fit-content。可以作用在居中元素或居中元素的父元素上。
 ### 垂直居中
 - table-cell + vertical-align middle。
 - line-height 与 height 同高 + 居中子元素inline-block，line-height initial。如果对子元素的大小没有要求，只需行高和高相同即可。
@@ -161,6 +161,130 @@ linear-gradient(90deg, #4caf50 0, #4caf50 20%, #99afe0 20%, #99afe0);
 - flex+calc
 - float+calc
 - absolute。分两个子元素，都absolute，左边固定宽度。右边清除浮动，前后伪元素table, 后伪元素clear：both。子元素是一个div，里面三个float left width 33.33%。
+
+### 盒模型
+盒模型包括content、padding、border和margin。
+### box-sizing
+不同的盒模型、width所指定的区域不同。box-sizing属性控制盒模型的解析模式。
+1. content box。width设置的尺寸是content的尺寸。
+2. border box。width设置的是包含border在内的尺寸。
+
+### CSS选择器有哪些
+1. id选择器
+2. class选择器
+3. 标签选择器
+4. 后代选择器
+5. 子元素选择器
+6. 相邻选择器（h1 + p）
+7. 通配符选择器（*）
+8. 属性选择器（a[href="1"])
+9. 伪类、伪元素选择器（a:hover, a::after）
+
+### 选择器优先级
+从小到大：继承、元素、类、id、标签和 !important。如果优先级相同，选择后出现的。
+### 可继承的CSS属性
+1. font-size
+2. font-family
+3. color
+
+### 伪类
+- :first-of-type 选择属于其父元素的首个元素
+- :last-of-type 选择属于其父元素的最后元素
+- :only-of-type 选择属于其父元素唯一的元素
+- :only-child 选择属于其父元素的唯一子元素
+- :nth-child(2) 选择属于其父元素的第二个子元素
+- :enabled :disabled 表单控件的禁用状态
+- :checked 单选框或复选框被选中
+
+### 常见兼容性问题
+1. IE下，可以使用获取常规属性的方法来获取自定义属性,也可以使用getAttribute()获取自定义属性；Firefox下，只能使用getAttribute()获取自定义属性。解决方法:统一通过getAttribute()获取自定义属性。
+2. Chrome 中文界面下默认会将小于 12px 的文本强制按照 12px 显示,可通过加入 CSS 属性 -webkit-text-size-adjust: none; 解决。
+
+### BFC块级格式上下文
+BFC 规定了内部的 Block Box如何布局。
+1. 内部的Box会在垂直方向上一个接一个放置。
+2. Box垂直方向的距离由margin决定，属于同一个BFC的两个相邻Box的margin会发生重叠。
+3. 每个元素的margin box 的左边，与包含块border box的左边相接触。
+4. BFC的区域不会与float box重叠。
+5. BFC是页面上的一个隔离的独立容器，容器里面的子元素不会影响到外面的元素。
+6. 计算BFC的高度时，浮动元素也会参与计算。
+
+满足下列条件之一就可触发BFC
+1. 根元素，即html
+2. float的值不为none（默认）
+3. overflow的值不为visible（默认）
+4. display的值为inline-block、table-cell、table-caption
+5. position的值为absolute或fixed
+
+### 清除浮动的方式
+1. 父级div定义height
+2. 最后一个浮动元素后加空div标签 并添加样式clear:both。
+3. 包含浮动元素的父标签添加样式overflow为hidden或auto。
+4. 父级div定义zoom
+5. 父元素伪元素设置
+6. 前后伪元素 display table, 后伪元素clear both
+### 设置元素浮动后，元素的display值是？
+自动变成block
+
+### 媒体查询
+1. head 标签内 link 标签设置。
+```html
+<link rel="stylesheet" type="text/css" href="xxx.css" media="only screen and (max-device-width:480px)">
+```
+2. css
+```css
+@media only screen and (max-device-width:480px) {
+}
+```
+
+### 在网页中的应该使用奇数还是偶数的字体？
+使用偶数字体。偶数字号相对更容易和 web 设计的其他部分构成比例关系。
+
+### margin和padding适用场景
+padding在border内，margin在外。padding有背景色，margin无。相邻盒子margin会重叠。
+
+### padding、margin的百分比设定相对于哪个元素
+相对于父元素的宽度
+
+### 如何理解 line-height
+行高是指两行文字间基线的距离。CSS中起高度作用的是height和line-height，没有定义height属性，最终其表现作用一定是line-height。
+
+### 怎么让 Chrome 支持小于12px 的文字？
+transform scale
+
+### 让页面里的字体变清晰，变细用 CSS 怎么做？
+-webkit-font-smoothing在window系统下没有起作用，但是在IOS设备上起作用-webkit-font-smoothing：antialiased是最佳的，灰度平滑。
+
+### position:fixed; 在 Android 下无效怎么处理？
+```html
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
+```
+
+### 如果需要手动写动画，你认为最小时间间隔是多久，为什么？
+多数显示器默认频率是60Hz，即1秒刷新60次，所以理论上最小间隔为1/60＊1000ms ＝ 16.7ms。
+
+### li与li之间有看不见的空白间隔是什么原因引起的？有什么解决办法？
+行框的排列会受到中间空白（回车空格）等的影响，因为空格也属于字符,这些空白也会被应用样式，占据空间，所以会有间隔。
+
+解决方法：
+1. li 代码写在一行
+2. 浮动li
+3. ul 设置字体大小0。或者letter-space: -3px
+
+### style标签写在body后与body前有什么区别？
+页面加载自上而下 当然是先加载样式。
+
+写在body标签后由于浏览器以逐行方式对HTML文档进行解析，当解析到写在尾部的样式表（外联或写在style标签）会导致浏览器停止之前的渲染，等待加载且解析样式表完成之后重新渲染，出现页面闪烁问题。
+
+### CSS属性overflow属性定义溢出元素内容区的内容会如何处理?
+参数是scroll时候，必会出现滚动条。
+
+参数是auto时候，子元素内容大于父元素时出现滚动条。
+
+参数是visible时候，溢出的内容出现在父元素之外。
+
+参数是hidden时候，溢出隐藏。
+
 ## 资料
 [1] [CSS 拷问：水平垂直居中方法你会几种？](https://liuyib.github.io/2020/04/07/css-h-and-v-center/)
 [2] [CSS灵感](https://csscoco.com/inspiration/)
