--- a/_posts/技术/面试/2022-11-12-手写题.md
+++ b/_posts/技术/面试/2022-11-12-手写题.md
@@ -451,3 +451,14 @@ asyncPool(2, [1000, 5000, 3000, 2000], timeout).then(res => {
   console.log(res)
 });
 ```
+## defer
+```javascript
+Function.prototype.defer = function(ms) {
+  let f = this;
+  return function(...args) {
+    setTimeout(() => f.apply(this, args), ms);
+  }
+};
+```
+## 资料
+[20行实现 Promise](https://juejin.cn/post/6844904094079926286)
