--- a/_posts/技术/工程化/2022-11-09-webpack.md
+++ b/_posts/技术/工程化/2022-11-09-webpack.md
@@ -10,6 +10,13 @@ tags:
     - Webpack
 ---
 # webpack
+## 基本命令
+```shell
+#安装
+npm install -D webpack webpack-cli
+#打包
+npx webpack
+```
 ## Webpack打包流程
 - 输入：从文件系统读入代码文件；
 - 模块递归处理：调用 Loader 转译 Module 内容，并将结果转换为 AST，从中分析出模块依赖关系，进一步递归调用模块处理过程，直到所有依赖文件都处理完毕；
@@ -46,7 +53,6 @@ module.exports = function(env, argv) {
 }
 ```
 运行时，Webpack 会传入两个环境参数对象：
-
 - env：通过 --env 传递的命令行参数，适用于自定义参数，例如：
 
 |命令：|env 参数值：|
@@ -56,6 +62,7 @@ module.exports = function(env, argv) {
 |npx webpack --env platform=app --env production|{ platform: "app", production: true }|
 |npx webpack --env foo=bar=app|{foo: "bar=app"}|
 |npx webpack --env app.platform="staging" --env app.name="test"|npx webpack --env app.platform="staging" --env app.name="test"|
+
 - argv：命令行 [Flags](https://webpack.js.org/api/cli/#flags) 参数，支持 entry/output-path/mode/merge 等。
 
 ## babel
@@ -88,20 +95,28 @@ module.exports = {
 npm install --save-dev eslint eslint-webpack-plugin eslint-config-standard eslint-plugin-promise eslint-plugin-import eslint-plugin-n
 ```
 .eslintrc文件配置
-```
+```json
 {
   "extends": "standard"
 }
 ```
 webpack配置
-```
+```javascript
+const ESLintPlugin = require('eslint-webpack-plugin')
 module.exports = {
   plugins: [new ESLintPlugin()]
 }
 ```
 ## eslint+typescript+babel
 ```shell
-npm i -D webpack webpack-cli @babel/core @babel/preset-env babel-loader @babel/preset-typescript typescript @typescript-eslint/parser @typescript-eslint/eslint-plugin eslint eslint-webpack-plugin
+npm i -D webpack webpack-cli \
+    # babel 依赖
+    @babel/core @babel/cli @babel/preset-env babel-loader \
+    # TypeScript 依赖
+    typescript @typescript-eslint/parser @typescript-eslint/eslint-plugin \
+    @babel/preset-typescript \
+    # ESLint 依赖
+    eslint eslint-webpack-plugin
 ```
 .eslintrc配置
 ```json
