--- a/_posts/技术/工程化/2022-11-09-webpack.md
+++ b/_posts/技术/工程化/2022-11-09-webpack.md
@@ -564,7 +564,7 @@ module.exports = {
   ],
 };
 ```
-## 实现并行构建
+## 并行构建
 ### happyPack
 HappyPack 能够将耗时的文件加载（Loader）操作拆散到多个子进程中并发执行，子进程执行完毕后再将结果合并回传到 Webpack 进程，从而提升构建性能。
 不过，HappyPack 的用法稍微有点难以理解，需要同时：
@@ -670,3 +670,408 @@ module.exports = {
   ]
 };
 ```
+上面这种多实例模式虽然能应对多种类型资源的加载需求，但默认情况下反而会带来新的性能损耗。
+
+为此，HappyPack 提供了一套简单易用的共享进程池接口，只需要创建 HappyPack.ThreadPool 对象，并通过 size 参数限定进程总量，之后将该例配置到各个 HappyPack 插件的 threadPool 属性上即可，例如：
+```js
+const os = require('os')
+const HappyPack = require('happypack');
+const happyThreadPool = HappyPack.ThreadPool({
+  // 设置进程池大小
+  size: os.cpus().length - 1
+});
+
+module.exports = {
+  // ...
+  plugins: [
+    new HappyPack({
+      id: 'js',
+      // 设置共享进程池
+      threadPool: happyThreadPool,
+      loaders: ['babel-loader', 'eslint-loader']
+    }),
+    new HappyPack({
+      id: 'styles',
+      threadPool: happyThreadPool,
+      loaders: ['style-loader', 'css-loader', 'less-loader']
+    })
+  ]
+};
+```
+使用 HappyPack.ThreadPool 接口后，HappyPack 会预先创建好一组工作进程，所有插件实例的资源转译任务会通过内置的 HappyThread 对象转发到空闲进程做处理，避免频繁创建、销毁进程。
+
+核心步骤：
+- happlypack/loader 接受到转译请求后，从 Webpack 配置中读取出相应 HappyPack 插件实例；
+- 调用插件实例的 compile 方法，创建 HappyThread 实例（或从 HappyThreadPool 取出空闲实例）；
+- HappyThread 内部调用 child_process.fork 创建子进程，并执行HappyWorkerChannel 文件；
+- HappyWorkerChannel 创建 HappyWorker ，开始执行 Loader 转译逻辑；
+
+#### 缺点
+作者不再维护；HappyPack 自己实现的加载器逻辑可能有兼容性问题；其主要用于文件加载阶段，并不会影响后续的产物生成、合并、优化等功能，性能收益有限。
+
+### Thread-loader
+Thread-loader 与 HappyPack 功能类似，都是以多进程方式加载文件的 Webpack 组件，两者主要区别：
+持续迭代；用法简单；
+HappyPack 启动后会创建一套 Mock 上下文环境 —— 包含 emitFile 等接口，并传递给 Loader，因此对大多数 Loader 来说，运行在 HappyPack 与运行在 Webpack 原生环境相比没有太大差异；但 Thread-loader 并不具备这一特性，所以要求 Loader 内不能调用特定上下文接口，兼容性较差。
+```shell
+#安装
+yarn add -D thread-loader
+```
+```javascript
+module.exports = {
+  module: {
+    rules: [
+      {
+        test: /\.js$/,
+        // 放在 use 数组首位，确保最先运行
+        use: ["thread-loader", "babel-loader", "eslint-loader"],
+      },
+      // 配置对象
+      {
+        test: /\.js$/,
+        use: [
+          {
+            loader: "thread-loader",
+            options: {
+              workers: 2,
+              workerParallelJobs: 50,
+              // ...
+            },
+          },
+          "babel-loader",
+          "eslint-loader",
+        ],
+      }
+    ],
+  },
+};
+```
+
+启动后，Thread-loader 会在加载文件时创建新的进程，在子进程中使用 loader-runner 库运行 thread-loader 之后的 Loader 组件，执行完毕后再将结果回传到 Webpack 主进程，从而实现性能更佳的文件加载转译效果。
+
+不过，Thread-loader 也同样面临着频繁的子进程创建、销毁所带来的性能问题，为此，Thread-loader 提供了 warmup 接口用于前置创建若干工作子进程，降低构建时延，用法：
+```javascript
+const threadLoader = require("thread-loader");
+
+threadLoader.warmup(
+  {
+    // 可传入上述 thread-loader 参数
+    workers: 2,
+    workerParallelJobs: 50,
+  },
+  [
+    // 子进程中需要预加载的 node 模块
+    "babel-loader",
+    "babel-preset-es2015",
+    "sass-loader",
+  ]
+);
+```
+#### 缺点
+- 在 Thread-loader 中运行的 Loader 不能调用 emitAsset 等接口，这会导致 style-loader 这一类加载器无法正常工作，解决方案是将这类组件放置在 thread-loader 之前，如 ['style-loader', 'thread-loader', 'css-loader']；
+- Loader 中不能获取 compilation、compiler 等实例对象，也无法获取 Webpack 配置。
+
+这会导致一些 Loader 无法与 Thread-loader 共同使用
+
+### Parallel-Webpack
+Thread-loader、HappyPack 这类组件所提供的并行能力都仅作用于文件加载过程，对后续 AST 解析、依赖收集、打包、优化代码等过程均没有影响，理论收益还是比较有限的。
+
+```shell
+yarn add -D parallel-webpack
+
+#使用
+npx parallel-webpack
+```
+```javascript
+module.exports = [{
+    entry: 'pageA.js',
+    output: {
+        path: './dist',
+        filename: 'pageA.js'
+    }
+}, {
+    entry: 'pageB.js',
+    output: {
+        path: './dist',
+        filename: 'pageB.js'
+    }
+}];
+```
+
+Parallel-Webpack 会为配置文件中导出的每个 Webpack 配置对象启动一个独立的构建进程，从而实现并行编译的效果。底层原理很简单，基本上就是在 Webpack 上套了个壳：
+
+- 根据传入的配置项数量，调用 worker-farm 创建复数个工作进程；
+- 工作进程内调用 Webpack 执行构建；
+- 工作进程执行完毕后，调用 node-ipc 向主进程发送结束信号。
+
+这种方式在需要同时执行多份配置的编译时特别有效，但若配置文件本身只是导出了单个配置对象则意义不大。
+
+为了更好地支持多种配置的编译，Parallel-Webpack 还提供了 createVariants 函数，用于根据给定变量组合，生成多份 Webpack 配置对象，如：
+```javascript
+const createVariants = require('parallel-webpack').createVariants
+const webpack = require('webpack')
+
+const baseOptions = {
+  entry: './index.js'
+}
+
+// 配置变量组合
+// 属性名为 webpack 配置属性；属性值为可选的变量
+// 下述变量组合将最终产生 2*2*4 = 16 种形态的配置对象
+const variants = {
+  minified: [true, false],
+  debug: [true, false],
+  target: ['commonjs2', 'var', 'umd', 'amd']
+}
+
+function createConfig (options) {
+  const plugins = [
+    new webpack.DefinePlugin({
+      DEBUG: JSON.stringify(JSON.parse(options.debug))
+    })
+  ]
+  return {
+    output: {
+      path: './dist/',
+      filename: 'MyLib.' +
+                options.target +
+                (options.minified ? '.min' : '') +
+                (options.debug ? '.debug' : '') +
+                '.js'
+    },
+    plugins: plugins
+  }
+}
+
+module.exports = createVariants(baseOptions, variants, createConfig)
+```
+
+虽然，parallel-webpack 相对于 Thread-loader、HappyPack 有更高的并行度，但进程实例之间并没有做任何形式的通讯，这可能导致相同的工作在不同进程 —— 或者说不同 CPU 核上被重复执行。
+
+例如需要对同一份代码同时打包出压缩和非压缩版本时，在 parallel-webpack 方案下，前置的资源加载、依赖解析、AST 分析等操作会被重复执行，仅仅最终阶段生成代码时有所差异。
+
+这种技术实现，对单 entry 的项目没有任何收益，只会徒增进程创建成本；但特别适合 MPA 等多 entry 场景，或者需要同时编译出 esm、umd、amd 等多种产物形态的类库场景。
+
+## 并行压缩
+Webpack4 默认使用 [Uglify-js](https://www.npmjs.com/package/uglifyjs-webpack-plugin) 实现代码压缩，Webpack5 之后则升级为 [Terser](https://webpack.js.org/plugins/terser-webpack-plugin/) —— 一种性能与兼容性更好的 JavaScript 代码压缩混淆工具，两种组件都原生实现了多进程并行压缩能力。
+
+以 Terser 为例，TerserWebpackPlugin 插件默认已开启并行压缩，开发者也可以通过 parallel 参数（默认值为 require('os').cpus() - 1）设置具体的并发进程数量，如：
+```javascript
+const TerserPlugin = require("terser-webpack-plugin");
+
+module.exports = {
+    optimization: {
+        minimize: true,
+        minimizer: [new TerserPlugin({
+            parallel: 2 // number | boolean
+        })],
+    },
+};
+```
+上述配置即可设定最大并行进程数为 2。此外，Webpack4 所使用的 uglifyjs-webpack-plugin 也提供了类似的功能，用法与 Terser 相同。
+
+理论上，并行确实能够提升系统运行效率，但 Node 单线程架构下，所谓的并行计算都只能依托与派生子进程执行，而创建进程这个动作本身就有不小的消耗 —— 大约 600ms，对于小型项目，构建成本可能可能很低，引入多进程技术反而导致整体成本增加，因此建议大家按实际需求斟酌使用上述多进程方案。
+
+
+## 构建性能优化技巧
+1. 使用最新版本的webpack、使用新特性。
+2. 约束 Loader 执行范围。因为 Loader 在执行内容转换的过程中可能需要比较密集的 CPU 运算。通常可以排除 node_module 文件夹。
+```javascript
+module.exports = {
+  module: {
+    rules: [
+      {
+        test: /.js$/,
+        exclude: /node_modules/,
+        use: ['babel-loader', 'eslint-loader']
+      }
+    ]
+  }
+}
+```
+3. 使用module.noParse跳过提前打包处理过的文件的编译。
+
+注意：
+- 由于跳过了前置的 AST 分析动作，构建过程无法发现文件中可能存在的语法错误，需要到运行（或 Terser 做压缩）时才能发现问题，所以必须确保 noParse 的文件内容正确性。
+- 由于跳过了依赖分析的过程，所以文件中，建议不要包含 import/export/require/define 等模块导入导出语句 —— 换句话说，noParse 文件不能存在对其它文件的依赖，除非运行环境支持这种模块化方案。
+- 由于跳过了内容分析过程，Webpack 无法标记该文件的导出值，也就无法实现 Tree-shaking。
+
+例如：
+
+React@18 默认定义的导出文件是 index.js。
+```json
+{
+  "main": "index.js"
+}
+```
+但 node_module/react/index.js 文件包含了模块导入语句 require：
+```js
+if (process.env.NODE_ENV === 'production') {
+  module.exports = require('./cjs/react.production.min.js');
+} else {
+  module.exports = require('./cjs/react.development.js');
+}
+```
+此时，真正有效的代码被包含在 react.development.js（或 react.production.min.js）中，但 Webpack 只会打包这段 index.js 内容，
+也就造成了产物中实际上并没有真正包含 React。针对这个问题，我们可以先找到适用的代码文件，然后用 resolve.alias 配置项重定向到该文件：
+```javascript
+module.exports = {
+  module: {
+    noParse: /react|lodash/,
+    resolve: {
+      alias: {
+        react: path.join(__dirname,
+          process.env.NODE_ENV === 'production'
+          ? './node modules/react/cjs/react.production.min.js' 
+          :  './node modules/react/cjs/react.development.js'
+        )
+      }
+    }
+  }
+}
+```
+提示：使用 externals 也能将部分依赖放到构建体系之外，实现与 noParse 类似的效果，详情可查阅官网。
+4. 开发模式禁用产物优化
+Webpack 提供了许多产物优化功能，例如：Tree-Shaking、SplitChunks、Minimizer 等，这些能力能够有效减少最终产物的尺寸，
+提升生产环境下的运行性能，但这些优化在开发环境中意义不大，反而会增加构建器的负担(都是性能大户)。
+
+最终，建议开发环境配置如：
+```javascript
+module.exports = {
+  mode: 'development',
+  optimization: {
+    // 移除已存在在所有父级模块中的模块
+    removeAvailableModules: false,
+    // 移除空模块
+    removeEmptyChunks: false,
+    // 关闭代码分包
+    splitChunks: false,
+    // 关闭代码压缩
+    minmize: false,
+    // 关闭模块合并
+    concatenateModules: false,
+    // 关闭 Tree-shaking 功能
+    usedExports: false
+  }
+}
+```
+5. 最小化 watch 范围
+在 watch 模式下（通过 npx webpack --watch 命令启动），Webpack 会持续监听项目目录中所有代码文件，
+发生变化时执行 rebuild 命令。前端项目中部分资源并不会频繁更新，例如 node_modules，所以最小化 watch 范围能提高性能。
+```javascript
+module.exports = {
+  watchOptions: {
+    ignored: /node_modules/
+  }
+}
+```
+6. 跳过 TS 类型检查
+类型检查涉及 AST 解析、遍历以及其它非常消耗 CPU 的操作，会给工程化流程带来比较大的性能负担，因此我们可以选择关闭 ts-loader 的类型检查功能：
+```javascript
+module.exports = {
+  module: {
+    rules: [
+      {
+        test: /.ts$/,
+        use: [
+          {
+            loader: 'ts-loader',
+            options: {
+              // 设置为仅编译，关闭类型检查
+              transpileOnly: true
+            }
+          }
+        ]
+      }
+    ]
+  }
+}
+```
+然后我们可以用过以下步骤实现类型检查：
+- 可以借助编辑器的 TypeScript 插件实现代码检查
+- 使用 fork-ts-checker-webpack-plugin 插件将类型检查能力剥离到 子进程 执行，例如：
+
+```javascript
+const ForkTsCheckerWebpackPlugin = require('fork-ts-checker-webpack-plugin');
+
+module.exports = {
+  module: {
+    rules: [
+      {
+        test: /\.ts$/,
+        use: [
+          {
+            loader: 'ts-loader',
+            options: {
+              transpileOnly: true
+            }
+          }
+        ]
+      }
+    ]
+  },
+  plugins: [
+    // 用于执行类型检查
+    new ForkTsCheckerWebpackPlugin()
+  ]
+}
+```
+这样，既可以获得 Typescript 静态类型检查能力，又能提升整体编译速度。
+7. 优化 ESLint 性能
+使用 eslint-loader 实现实时代码检查，会带来比较高昂且不必要的性能成本，我们可以选择其它更聪明的方式接入 ESLint。
+
+例如，使用新版本组件 eslint-webpack-plugin 替代旧版 eslint-loader，两者差异在于，
+eslint-webpack-plugin 在模块构建完毕（compilation.hooks.succeedModule 钩子）后执行检查，不会阻断文件加载流程，性能更优，用法：
+```shell
+yarn add -D eslint-webpack-plugin
+```
+```javascript
+const ESLintPlugin = reequire('eslint-wepback-plugin');
+module.exports = {
+  plugins: [new ESLintPlugin(options)]
+}
+```
+或者，可以选择在特定条件、场景下执行 ESLint，减少对构建流程的影响，如：
+- 使用编辑器插件完成 ESLint 检查、错误提示、自动 Fix，如 VS Code 的 dbaeumer.vscode-eslint 插件.
+- 使用 husky，仅在代码提交前执行 ESLint 代码检查.
+- 仅在 production 构建中使用 ESLint，能够有效提高开发阶段的构建效率。
+
+8. 慎用source-map
+Webpack 默认提供了一套同时兼容 CMD、AMD、ESM 等模块化方案的资源搜索规则 —— enhanced-resolve，它能将各种模块导入语句准确定位到模块对应的物理资源路径。例如：
+
+- import 'lodash' 这一类引入 NPM 包的语句会被 enhanced-resolve 定位到对应包体文件路径 node_modules/lodash/index.js。
+- import './a' 这类不带文件后缀名的语句，则可能被定位到 ./a.js 文件。
+- import '@/a' 这类化名路径的引用，则可能被定位到 $PROJECT_ROOT/src/a.js 文件。
+
+需要注意，这类增强资源搜索体验的特性背后涉及许多 IO 操作，本身可能引起较大的性能消耗，开发者可根据实际情况调整 resolve 配置，缩小资源搜索范围，包括：
+**resolve.extensions 配置**
+
+在 Webpack5 中，resolve.extensions 默认值为 ['.js', '.json', '.wasm'] ，
+这意味着 Webpack 在针对不带后缀名的引入语句时，可能需要执行三次判断逻辑才能完成文件搜索，针对这种情况，可行的优化措施包括：
+- 修改 resolve.extensions 配置项，减少匹配次数。
+- 代码中尽量补齐文件后缀名。
+- 设置 resolve.enforceExtension = true ，强制要求开发者提供明确的模块后缀名，不过这种做法侵入性太强，不太推荐。
+
+**resolve.modules 配置**
+
+类似于 Node 模块搜索逻辑，当 Webpack 遇到 import 'lodash' 这样的 npm 包导入语句时，会先尝试在当前项目 node_modules 目录搜索资源，
+如果找不到，则按目录层级尝试逐级向上查找 node_modules 目录，如果依然找不到，则最终尝试在全局 node_modules 中搜索。
+
+我们通常会尽量将 NPM 包安装在有限层级内，因此 Webpack 这一逐层查找的逻辑大多数情况下实用性并不高，
+开发者可以通过修改 resolve.modules 配置项，主动关闭逐层搜索功能，例如：
+```javascript
+const path = require('path');
+
+module.exports = {
+  resolve: {
+    modules: [path.resolve(__dirname, 'node_modules')]
+  }
+}
+```
+
+**resolve.mainFiles 配置**
+
+与 resolve.extensions 类似，resolve.mainFiles 配置项用于定义文件夹默认文件名，
+例如对于 import './dir' 请求，假设 resolve.mainFiles = ['index', 'home'] ，Webpack 会按依次测试 ./dir/index 与 ./dir/home 文件是否存在。
+
+因此，实际项目中应控制 resolve.mainFiles 数组数量，减少匹配次数。
