--- a/_posts/技术/小程序/2022-11-07-小程序查漏补缺.md
+++ b/_posts/技术/小程序/2022-11-07-小程序查漏补缺.md
@@ -482,6 +482,14 @@ Component({
 2. 模板拥有自己的作用域，只能使用 data 传入的数据以及模板定义文件中定义的 <wxs /> 模块。
 3. include标签可以将目标文件除了 <template/> <wxs/> 外的整个代码引入，相当于是拷贝到 include 位置。
 
+### 接口
+#### 页面
+##### Router
+页面路由器对象。可以通过 this.pageRouter 或 this.router 获得当前页面或自定义组件的路由器对象。
+但如果在自定义组件中调用， this.pageRouter 将相对于自定义组件所在的页面来进行路由跳转，而 this.router 相对于自定义组件自身的路径。
+
+页面路由器有 switchTab reLaunch redirectTo navigateTo navigateBack 五个方法，与 wx 的同名方法功能相同，区别在页面路由的方法调用时是相对于 this 指代的页面或组件。
+
 ## TODO
 - 响应显示区域变化。屏幕旋转，尺寸不同的设备的显示。https://developers.weixin.qq.com/miniprogram/dev/framework/view/resizable.html
 - 分栏模式。https://developers.weixin.qq.com/miniprogram/dev/framework/view/frameset.html
