--- a/_posts/技术/工程化/2022-11-09-webpack.md
+++ b/_posts/技术/工程化/2022-11-09-webpack.md
@@ -564,6 +564,7 @@ module.exports = {
   ],
 };
 ```
+
 ## 并行构建
 ### happyPack
 HappyPack 能够将耗时的文件加载（Loader）操作拆散到多个子进程中并发执行，子进程执行完毕后再将结果合并回传到 Webpack 进程，从而提升构建性能。
@@ -872,7 +873,6 @@ module.exports = {
 
 理论上，并行确实能够提升系统运行效率，但 Node 单线程架构下，所谓的并行计算都只能依托与派生子进程执行，而创建进程这个动作本身就有不小的消耗 —— 大约 600ms，对于小型项目，构建成本可能可能很低，引入多进程技术反而导致整体成本增加，因此建议大家按实际需求斟酌使用上述多进程方案。
 
-
 ## 构建性能优化技巧
 1. 使用最新版本的webpack、使用新特性。
 2. 约束 Loader 执行范围。因为 Loader 在执行内容转换的过程中可能需要比较密集的 CPU 运算。通常可以排除 node_module 文件夹。
@@ -1075,3 +1075,134 @@ module.exports = {
 例如对于 import './dir' 请求，假设 resolve.mainFiles = ['index', 'home'] ，Webpack 会按依次测试 ./dir/index 与 ./dir/home 文件是否存在。
 
 因此，实际项目中应控制 resolve.mainFiles 数组数量，减少匹配次数。
+
+## SplitChunksPlugin
+### 深入理解 Chunk
+Chunk 是 Webpack 内部一个非常重要的底层设计，用于组织、管理、优化最终产物，在构建流程进入生成(Seal)阶段后：
+
+1. Webpack 首先根据 entry 配置创建若干 Chunk 对象；
+2. 遍历构建(Make)阶段找到的所有 Module 对象，同一 Entry 下的模块分配到 Entry 对应的 Chunk 中；
+3. 遇到异步模块则创建新的 Chunk 对象，并将异步模块放入该 Chunk；
+4. 分配完毕后，根据 SplitChunksPlugin 的启发式算法进一步对这些 Chunk 执行裁剪、拆分、合并、代码调优，最终调整成运行性能(可能)更优的形态；
+5. 最后，将这些 Chunk 一个个输出成最终的产物(Asset)文件，编译工作到此结束。
+
+Webpack 默认会将以下三种模块做分包处理：
+- Initial Chunk：entry 模块及相应子模块打包成 Initial Chunk；
+- Async Chunk：通过 import('./xx') 等语句导入的异步模块及相应子模块组成的 Async Chunk；
+- Runtime Chunk：运行时代码抽离成 Runtime Chunk，可通过 entry.runtime 配置项实现。
+
+但 Initial Chunk 与 Async Chunk 这种略显粗暴的规则会带来两个明显问题：
+1. 模块重复打包
+
+假如多个 Chunk 同时依赖同一个 Module，那么这个 Module 会被不受限制地重复打包进这些 Chunk。
+2. 资源冗余 & 低效缓存：
+
+Webpack 会将 Entry 模块、异步模块所有代码都打进同一个单独的包，这在小型项目通常不会有明显的性能问题，
+但伴随着项目的推进，包体积逐步增长可能会导致应用的响应耗时越来越长。归根结底这种将所有资源打包成一个文件的方式存在两个弊端：
+- 资源冗余：客户端必须等待整个应用的代码包都加载完毕才能启动运行，但可能用户当下访问的内容只需要使用其中一部分代码
+- 缓存失效：将所有资源达成一个包后，所有改动 —— 即使只是修改了一个字符，客户端都需要重新下载整个代码包，缓存命中率极低
+
+这两个问题都可以通过更科学的分包策略解决，例如：
+
+- 将被多个 Chunk 依赖的包分离成独立 Chunk，防止资源重复；
+- node_modules 中的资源通常变动较少，可以抽成一个独立的包，业务代码的频繁变动不会导致这部分第三方库资源缓存失效，被无意义地重复加载。
+
+为此，Webpack 专门提供了 SplitChunksPlugin 插件，用于实现更灵活、可配置的分包，提升应用性能。
+### 使用
+[SplitChunksPlugin](https://webpack.docschina.org/plugins/split-chunks-plugin/) 是 Webpack 4 之后内置实现的最新分包方案。主要能力有：
+- SplitChunksPlugin 支持根据 Module 路径、Module 被引用次数、Chunk 大小、Chunk 请求数等决定是否对 Chunk 做进一步拆解，这些决策都可以通过 optimization.splitChunks 相应配置项调整定制，基于这些能力我们可以实现：
+  - 单独打包某些特定路径的内容，例如 node_modules 打包为 vendors；
+  - 单独打包使用频率较高的文件；
+- SplitChunksPlugin 还提供了 optimization.splitChunks.cacheGroup 概念，用于对不同特点的资源做分组处理，并为这些分组设置更有针对性的分包规则；
+- SplitChunksPlugin 还内置了 default 与 defaultVendors 两个 cacheGroup，提供一些开箱即用的分包特性：
+  - node_modules 资源会命中 defaultVendors 规则，并被单独打包；
+  - 只有包体超过 20kb 的 Chunk 才会被单独打包；
+  - 加载 Async Chunk 所需请求数不得超过 30；
+  - 加载 Initial Chunk 所需请求数不得超过 30。
+
+注：请求数不能等价 http 资源请求数。
+#### 设置分包范围
+首先，SplitChunksPlugin 默认情况下只对 Async Chunk 生效，我们可以通过 splitChunks.chunks 调整作用范围，该配置项支持如下值：
+- 字符串 'all' ：对 Initial Chunk 与 Async Chunk 都生效，建议优先使用该值，效果最佳；
+- 字符串 'initial' ：只对 Initial Chunk 生效；
+- 字符串 'async' ：只对 Async Chunk 生效；
+- 函数 (chunk) => boolean ：该函数返回 true 时生效；
+```javascript
+module.exports = {
+  //  示例
+  optimization: {
+    splitChunks: {
+      chunks: 'all',
+    },
+  },
+}
+```
+#### 根据 Module 使用频率分包
+SplitChunksPlugin 支持按 Module 被 Chunk 引用的次数决定是否分包，借助这种能力我们可以轻易将那些被频繁使用的模块打包成独立文件，减少代码重复。
+
+用法很简单，只需用 splitChunks.minChunks 配置项设定最小引用次数，例如：
+```javascript
+module.exports = {
+  //...
+  optimization: {
+    splitChunks: {
+      // 设定引用次数超过 2 的模块才进行分包
+      minChunks: 2
+    },
+  },
+}
+```
+注意，这里“被 Chunk 引用次数”并不直接等价于被 import 的次数，而是取决于上游调用者是否被视作 Initial Chunk 或 Async Chunk 处理，例如：
+```javascript
+// common.js
+export default "common chunk";
+
+// async-module.js
+import common from './common'
+
+// entry-a.js
+import common from './common'
+import('./async-module')
+
+// entry-b.js
+import common from './common'
+```
+上例包含四个模块，形成如下模块关系图：
+
+![img.png]('img/根据 Module 使用频率分包示例图.png')
+
+其中，entry-a、entry-b 分别被视作 Initial Chunk 处理；async-module 被 entry-a 以异步方式引入，因此被视作 Async Chunk 处理。那么对于 common 模块来说，分别被三个不同的 Chunk 引入，此时引用次数为 3，配合下面的配置：
+```javascript
+// webpack.config.js
+module.exports = {
+  entry: {
+    entry1: './src/entry-a.js',
+    entry2: './src/entry-b.js'
+  },
+  // ...
+  optimization: {
+    splitChunks: {      
+      minChunks: 2,
+      //...
+    }
+  }
+};
+```
+common 模块命中 optimization.splitChunks.minChunks = 2 规则，因此该模块可能会被单独分包，最终产物：
+
+- entry1.js
+- entry1.js
+- async-module.js
+- common.js
+
+强调一下，上面说的是“可能”，minChunks 并不是唯一条件，此外还需要满足诸如 minSize、chunks 等限制条件才会真正执行分包，接着往下看。
+#### 限制分包数量
+为防止最终产物文件数量过多导致 HTTP 网络请求数剧增，反而降低应用性能，
+Webpack 还提供了 maxInitialRequest/maxAsyncRequest 配置项，用于限制分包数量：
+- maxInitialRequest：用于设置 Initial Chunk 最大并行请求数；
+- maxAsyncRequests：用于设置 Async Chunk 最大并行请求数。
+
+这里所说的“请求数”，是指加载一个 Chunk 时所需要加载的所有分包数。例如对于一个 Chunk A，如果根据分包规则(如模块引用次数、第三方包)
+分离出了若干子 Chunk A[¡]，那么加载 A 时，浏览器需要同时加载所有的 A[¡]，此时并行请求数等于 ¡ 个分包加 A 主包，即 ¡+1。
+> 提示：通过 emitAssets 等方式直接输出产物文件不在此范畴。
+
