--- a/_posts/技术/HTML/2022-11-15-语义.md
+++ b/_posts/技术/HTML/2022-11-15-语义.md
@@ -136,3 +136,22 @@ aside很容易被理解为侧边栏，实际上二者是包含关系，侧边栏
 aside和header中都可能出现导航（nav标签），二者的区别是，header中的导航多数是到文章自己的目录，而aside中的导航多数是到关联页面或者是整站地图。
 
 最后footer中包含address，这是个非常容易被误用的标签。address并非像date一样，表示一个给机器阅读的地址，而是表示“文章（作者）的联系方式”，address明确地只关联到article和body。
+
+
+## 补充
+abbr标签表示缩写
+```html
+<abbr title="World Wide Web">WWW</abbr>.
+```
+dfn标签是用来包裹被定义的名词。
+```html
+The <dfn>Internet</dfn> is a global system of interconnected computer networks.
+```
+pre标签，表示这部分内容是预先排版过的，不需要浏览器进行排版。又因为这是一段计算机程序的示例输出，所以我们可以使用samp标签：
+```html
+<pre><samp>
+GET /home.html HTTP/1.1
+Host: www.example.org
+</samp></pre>
+```
+![img.png](/img/标签语义说明.png)
