--- a/_posts/技术/小程序/2022-11-07-小程序查漏补缺.md
+++ b/_posts/技术/小程序/2022-11-07-小程序查漏补缺.md
@@ -12,11 +12,14 @@ tags:
 # 小程序
 ## 指南
 ### 小程序注册
-[小程序注册页](https://mp.weixin.qq.com/wxopen/waregister?action=step1)，注册后在后台能拿到小程序的AppID。<br>
+[小程序注册页](https://mp.weixin.qq.com/wxopen/waregister?action=step1)，注册后在后台能拿到小程序的AppID。
+
 小程序的 AppID 相当于小程序平台的一个身份证，和服务号或订阅号的 AppID有区别。
 ### 环境
-小程序的运行环境分成渲染层和逻辑层，其中 WXML 模板和 WXSS 样式工作在渲染层，JS 脚本工作在逻辑层。<br/>
-小程序的渲染层和逻辑层分别由2个线程管理：渲染层的界面使用了WebView 进行渲染；逻辑层采用 JsCore 线程运行 JS 脚本。<br/>
+小程序的运行环境分成渲染层和逻辑层，其中 WXML 模板和 WXSS 样式工作在渲染层，JS 脚本工作在逻辑层。
+
+小程序的渲染层和逻辑层分别由2个线程管理：渲染层的界面使用了WebView 进行渲染；逻辑层采用 JsCore 线程运行 JS 脚本。
+
 一个小程序存在多个界面，所以渲染层存在多个 WebView 线程，这两个线程的通信会经由微信客户端做中转，逻辑层发送网络请求也经由 Native 转发。
 
 开启ES6转ES5和样式补全，因为各平台[运行环境](https://developers.weixin.qq.com/miniprogram/dev/framework/runtime/env.html)不同，导致有部分差异，具体表现以客户端为准。
@@ -461,7 +464,30 @@ Component({
 }
 ```
 
-## 框架
+## 接口
+## App
+注册小程序。App() 必须在 app.js 中调用，必须调用且只能调用一次。
+
+## 页面
+### setData
+支持两个参数，改变的数据和回调函数。
+
+data对象，其中 key 可以以数据路径的形式给出，支持改变数组中的某一项或对象的某个属性，如 array\[ 2 \].message，a.b.c.d，并且不需要在 this.data 中预先定义。
+
+仅支持设置可 JSON 化的数据，且大小不超过1024 KB，值不能是 undefined。
+### 页面间通信
+如果一个页面由另一个页面通过 wx.navigateTo 打开，这两个页面间将建立一条数据通道：
+
+- 被打开的页面可以通过 this.getOpenerEventChannel() 方法来获得一个 EventChannel 对象；
+- wx.navigateTo 的 success 回调中也包含一个 EventChannel 对象。
+
+这两个 EventChannel 对象间可以使用 emit 和 on 方法相互发送、监听事件。
+### Router
+页面路由器对象。可以通过 this.pageRouter 或 this.router 获得当前页面或自定义组件的路由器对象。
+但如果在自定义组件中调用， this.pageRouter 将相对于自定义组件所在的页面来进行路由跳转，而 this.router 相对于自定义组件自身的路径。
+
+页面路由器有 switchTab reLaunch redirectTo navigateTo navigateBack 五个方法，与 wx 的同名方法功能相同，区别在页面路由的方法调用时是相对于 this 指代的页面或组件。
+
 ### wxml语法
 #### template
 可复用代码片段
@@ -481,14 +507,6 @@ Component({
 1. import只引用目标文件定义的template，不会一直递归引用。
 2. 模板拥有自己的作用域，只能使用 data 传入的数据以及模板定义文件中定义的 <wxs /> 模块。
 3. include标签可以将目标文件除了 <template/> <wxs/> 外的整个代码引入，相当于是拷贝到 include 位置。
-
-### 接口
-#### 页面
-##### Router
-页面路由器对象。可以通过 this.pageRouter 或 this.router 获得当前页面或自定义组件的路由器对象。
-但如果在自定义组件中调用， this.pageRouter 将相对于自定义组件所在的页面来进行路由跳转，而 this.router 相对于自定义组件自身的路径。
-
-页面路由器有 switchTab reLaunch redirectTo navigateTo navigateBack 五个方法，与 wx 的同名方法功能相同，区别在页面路由的方法调用时是相对于 this 指代的页面或组件。
 
 ## TODO
 - 响应显示区域变化。屏幕旋转，尺寸不同的设备的显示。https://developers.weixin.qq.com/miniprogram/dev/framework/view/resizable.html
