--- a/_posts/技术/HTML/2022-12-17-元素坐标和大小.md
+++ b/_posts/技术/HTML/2022-12-17-元素坐标和大小.md
@@ -11,7 +11,7 @@ tags:
     - JavaScript
 ---
 总结有关元素宽度、高度、坐标等信息。
-![img.png](img/几何属性.png)
+![img.png](/img/几何属性.png)
 ## 几何属性
 注意：未显示或不存在文档中的元素，几何属性均为0，offsetParent为null
 ### offsetLeft/offsetTop
