--- a/_posts/技术/JavaScript/2022-12-26-事件.md
+++ b/_posts/技术/JavaScript/2022-12-26-事件.md
@@ -26,7 +26,6 @@ options对象可选项：
 - passive：如果为 true，那么处理程序将不会调用 preventDefault()，我们稍后将在 浏览器默认行为 一章中介绍。
 
 addEventListener(..., true) 的处理程序（true 是 {capture: true} 的一个简写形式）。
-
 ## 事件触发阶段
 捕获阶段-目标阶段-冒泡阶段。大多数事件会冒泡，因此能实现事件代理。
 
@@ -88,3 +87,21 @@ passive: true 选项告诉浏览器，处理程序不会取消滚动。然后浏
 
 可以用于冒泡事件的单独处理和全局处理。例如单独处理时调用 preventDefault 方法了，那么全局处理时判断 defaultPrevented 是否为 true，是的话本次不做处理。
 这样更灵活，外部代码可以访问本次事件信息。
+### 鼠标事件
+event.button 能区分鼠标的按键状态，被弃用的 event.which 能区分鼠标左中右按键。
+#### 组合键：shift，alt，ctrl，meta
+所有的鼠标事件都包含有关按下的组合键的信息。
+
+事件属性：
+- shiftKey：Shift
+- altKey：Alt（或对于 Mac 是 Opt）
+- ctrlKey：Ctrl
+- metaKey：对于 Mac 是 Cmd
+
+Mac 用户更习惯把 Cmd 作为 ctrl 使用，所以我们应该检查 if (event.ctrlKey || event.metaKey)
+
+键盘组合是工作流的一个补充。但应该要有不使用键盘也能做到这一点的方式。
+#### 防止在鼠标按下时的选择
+双击鼠标会有默认行为，选择文本。在这种情况下，最合理的方式是防止浏览器对 mousedown 进行操作，return false。
+
+防止复制可以使用 oncopy 事件，return false。
