--- a/_posts/技术/JavaScript/事件/2023-1-8-指针事件.md
+++ b/_posts/技术/JavaScript/事件/2023-1-8-指针事件.md
@@ -2,8 +2,8 @@
 layout:     post
 title:      指针事件
 subtitle:   
-date:       
-author:     
+date:       2023-1-8
+author:     sq
 header-img: 
 catalog: true
 tags:
