--- a/_posts/技术/JavaScript/表单/2023-1-11-表单.md
+++ b/_posts/技术/JavaScript/表单/2023-1-11-表单.md
@@ -73,16 +73,16 @@ document.forms[name/index]
 ### textarea
 使用 textarea.value 而不是 textarea.innerHTML，innerHTML 仅存储最初在页面上的 HTML，而不是存储的当前 value。
 ### select 和 option
-一个 <select> 元素有 4 个重要的属性：
-- select.options —— <option> 的子元素的集合，
-- select.value —— 当前所选择的 <option> 的 value，
-- select.selectedIndex —— 当前所选择的 <option> 的编号。
+一个 `<select>` 元素有 4 个重要的属性：
+- select.options —— `<option>` 的子元素的集合，
+- select.value —— 当前所选择的 `<option>` 的 value，
+- select.selectedIndex —— 当前所选择的 `<option>` 的编号。
 - select.multiple 是否允许多选
 
-有三种为 <select> 设置 value 的不同方式：
-- 找到对应的 <option> 元素（例如在 select.options 中），并将其 option.selected 设置为 true。
+有三种为 `<select>` 设置 value 的不同方式：
+- 找到对应的 `<option>` 元素（例如在 select.options 中），并将其 option.selected 设置为 true。
 - 如果我们知道新的值：将 select.value 设置为对应的新的值。
-- 如果我们知道新的选项的索引：将 select.selectedIndex 设置为对应 <option> 的编号。
+- 如果我们知道新的选项的索引：将 select.selectedIndex 设置为对应 `<option>` 的编号。
 
 #### new option
 在 [规范](https://html.spec.whatwg.org/multipage/forms.html#the-option-element) 中，有一个很好的简短语法可以创建一个 <option> 元素：
