--- a/_posts/技术/JavaScript/事件/2023-1-12-键盘事件.md
+++ b/_posts/技术/JavaScript/事件/2023-1-12-键盘事件.md
@@ -11,6 +11,74 @@ tags:
     - 事件
 ---
 # 键盘事件
+当一个按键被按下时，会触发 keydown 事件，而当按键被释放时，会触发 keyup 事件。
+唯一的例外是笔记本电脑的键盘上的 Fn 键。它没有键盘事件，因为它通常是被在比 OS 更低的级别上实现的。
+
+- keydown —— 在按下键时（如果长按按键，则将自动重复），在 keydown 事件中触发了 alert，如果在alert期间松开了按键，keyup事件也不会触发。
+- keyup —— 释放按键时。
 
 ## keydown
 keydown 仅会在聚焦的元素上触发，因此某些元素需要设置 tabIndex。
+## event.code 和 event.key
+事件对象的 key 属性允许获取字符，对于非字符（non-character）的按键，通常具有与 code 相同的值。
+而事件对象的 code 属性则允许获取“物理按键代码”，特定于键盘上按键的物理位置。
+
+请注意，event.code 准确地标明了哪个键被按下了。而 event.key 对按键的“含义”负责：它是什么（一个 “Shift”）。
+
+例如，同一个按键 Z，可以与或不与 Shift 一起按下。event.key 将是两个不同的字符：小写的 z 和大写的 Z。event.code 是相同的：KeyZ。
+
+如果用户使用不同的语言，那么切换到另一种语言 event.key 将产生完全不同的字符，而 event.code 则始终都是一样的："KeyZ"。
+
+每个按键的 code 都取决于该按键在键盘上的位置。UI [事件代码规范](https://www.w3.org/TR/uievents-code/) 中描述了按键 code 。
+例如：
+- 字符键的 code 为 "Key<letter>"："KeyA"，"KeyB" 等。
+- 数字键的 code 为："Digit<number>"："Digit0"，"Digit1" 等。
+- 特殊按键的 code 为按键的名字："Enter"，"Backspace"，"Tab" 等。
+
+如果不是任何字符的按键，例如 Shift 或 F1 或其他。对于这些按键，它们的 event.key 与 event.code 大致相同，
+Key: Shift; event.key: Shift; event.code: ShiftRight 或 ShiftLeft
+
+### 两者如何选择
+检查 event.key 还是 event.code 的值需要根据实际情况选择：
+
+一方面 event.key 的值是一个字符，它随语言而改变。那么相同的按键可能给出不同的字符。因此检查 event.code 会更好，因为它总是相同的。例如：
+```javascript
+document.addEventListener('keydown', function (event) {
+  if (event.code === 'KeyZ' && (event.ctrlKey || event.metaKey)) {
+    // ...
+  }
+});
+```
+另一方面，event.code 有一个问题。对于不同的键盘布局，相同的按键可能会具有不同的字符。
+例如美式键盘布局和德式键盘布局，对于同一个按键，美式布局为 “Z”，而德式布局为 “Y”（字母被替换了）。
+
+对于使用德式布局键盘的人来说，当他们按下 Y 时，event.code 将等于 KeyZ。
+听起来确实很怪，但事实确实如此。[规范](https://www.w3.org/TR/uievents-code/#table-key-code-alphanumeric-writing-system) 中明确提到了这种行为。不过仅有某些代码上会出现这个情况。
+
+那么为了可靠地跟踪与受键盘布局影响的字符，使用 event.key 可能是一个更好的方式。
+
+另一方面，event.code 的好处是，绑定到物理键位置的 event.code 会始终保持不变。因此，即使在切换了语言的情况下，依赖于它的热键也能正常工作。
+
+所以我们想要处理与布局有关的按键？那么 event.key 是我们必选的方式。
+或者我们希望一个热键即使在切换了语言后，仍能正常使用？那么 event.code 可能会更好。
+
+## 自动重复
+如果按下一个键足够长的时间，它就会开始“自动重复”：keydown 会被一次又一次地触发，然后当按键被释放时，我们最终会得到 keyup。
+
+对于由自动重复触发的事件，event 对象的 event.repeat 属性被设置为 true。
+
+## 默认行为
+阻止对 keydown 的默认行为可以取消大多数的行为，但基于 OS 的特殊按键除外。
+例如，在 Windows 中，Alt+F4 会关闭当前浏览器窗口。并且无法通过在 JavaScript 中阻止默认行为来阻止它。
+
+例如监听 input 的 onkeydown事件，只接受有效的数字或删除键，其余按键返回 false 禁止浏览器默认行为。
+实际上只能过滤通过按键的输入，鼠标右键黏贴或者其他输入方式并没有被禁止。
+
+## 历史遗留
+keypress 事件，还有事件对象的 keyCode、charCode 和 which 属性没有必要再使用，大多数浏览器对它们存在兼容性问题。
+
+## 移动端键盘
+当使用虚拟/移动端键盘时，更正式一点的名字叫做 IME（Input-Method Editor），
+W3C 标准规定 KeyboardEvent 的 e.keyCode 应该为 229，并且 e.key 应该为 "Unidentified"。
+
+所以当使用虚拟/移动端键盘时时，可能e.key、e.code、e.keyCode 的值不准确，导致并不能保证适用于移动设备。
