--- a/_posts/HTML/2022-11-08-HTML查漏补缺.md
+++ b/_posts/HTML/2022-11-08-HTML查漏补缺.md
@@ -12,7 +12,7 @@ tags:
 # html
 ## 层次结构
 DOM 节点是常规的 JavaScript 对象，每个 DOM 节点都属于一个特定的类。这些类形成层次结构（hierarchy）。完整的属性和方法集是继承的结果。它们使用基于原型的类进行继承，可以使用 instanceof 来检查继承。
-![img.png](img/HTML节点层级结构.png)
+![img.png](../../img/HTML节点层级结构.png)
 
 节点的 constructor 属性存储了构造函数
 ```javascript
