--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -285,6 +285,84 @@ transform scale
 
 参数是hidden时候，溢出隐藏。
 
+## JS
+### 闭包是什么
+每个函数都有对应的词法环境，记录了变量和对外部词法环境引用。代码要访问变量时，会先搜索内部词法环境，找不到再搜索外部环境，直至全局词法环境。
+
+闭包就是利用了这个特点，在函数内部保存了变量。闭包返回了嵌套函数，保留了对内部变量的引用，所以内部词法环境不会被删除。
+### 设计一个不能操作 DOM 和调接口的环境
+实现思路：
+
+1）利用 iframe 创建沙箱，取出其中的原生浏览器全局对象作为沙箱的全局对象
+
+2）设置一个黑名单，若访问黑名单中的变量，则直接报错，实现阻止\隔离的效果
+
+3）在黑名单中添加 document 字段，来实现禁止开发者操作 DOM
+
+4）在黑名单中添加 XMLHttpRequest、fetch、WebSocket 字段，实现禁用原生的方式调用接口
+
+5）若访问当前全局对象中不存在的变量，则直接报错，实现禁用三方库调接口
+
+6）最后还要拦截对 window 对象的访问，防止通过 window.document 来操作 DOM，避免沙箱逃逸
+
+#### 实现
+with对于沙箱的意义：可以实现所有变量均来自可靠或自主实现的上下文环境，而不会从全局的执行环境中取值，相当于做了一层拦截，实现隔离的效果
+
+```javascript
+// 沙箱全局代理对象类
+class SandboxGlobalProxy {
+  constructor(blacklist) {
+    // 创建一个 iframe 标签，取出其中的原生浏览器全局对象作为沙箱的全局对象
+    const iframe = document.createElement("iframe", { url: "about:blank" });
+    iframe.style.display = "none";
+    document.body.appendChild(iframe);
+
+    // 获取当前HTMLIFrameElement的Window对象
+    const sandboxGlobal = iframe.contentWindow;
+
+    return new Proxy(sandboxGlobal, {
+      // has 可以拦截 with 代码块中任意属性的访问
+      has: (target, prop) => {
+
+        // 黑名单中的变量禁止访问
+        if (blacklist.includes(prop)) {
+          throw new Error(`Can't use: ${prop}!`);
+        }
+        // sandboxGlobal对象上不存在的属性，直接报错，实现禁用三方库调接口
+        if (!target.hasOwnProperty(prop)) {
+          throw new Error(`Not find: ${prop}!`);
+        }
+
+        // 返回true，获取当前提供上下文对象中的变量；如果返回false，会继续向上层作用域链中查找
+        return true;
+      }
+    });
+  }
+}
+
+// 使用with关键字，来改变作用域
+function withedYourCode(code) {
+  code = "with(sandbox) {" + code + "}";
+  return new Function("sandbox", code);
+}
+
+// 将指定的上下文对象，添加到待执行代码作用域的顶部
+function makeSandbox(code, ctx) {
+  withedYourCode(code).call(ctx, ctx);
+}
+
+// 待执行的代码code，获取document对象
+const code = `console.log(document)`;
+
+// 设置黑名单
+const blacklist = ['window', 'document', 'XMLHttpRequest', 'fetch', 'WebSocket', 'Image'];
+
+// 将globalProxy对象，添加到新环境作用域链的顶部
+const globalProxy = new SandboxGlobalProxy(blacklist);
+
+makeSandbox(code, globalProxy);
+```
 ## 资料
 [1] [CSS 拷问：水平垂直居中方法你会几种？](https://liuyib.github.io/2020/04/07/css-h-and-v-center/)
 [2] [CSS灵感](https://csscoco.com/inspiration/)
+[3] [面试官：请设计一个不能操作 DOM 和调接口的环境](https://juejin.cn/post/7157570429928865828)
