--- a/_posts/面试/2022-11-12-手写题.md
+++ b/_posts/面试/2022-11-12-手写题.md
@@ -12,7 +12,7 @@ tags:
 ---
 # 手写题
 ## instanceof
-```
+```javascript
 function _instanceof (target, ancestor) {
   if (typeof target !== 'object' && typeof target !== 'function' || target === null) {
     return false;
@@ -115,7 +115,6 @@ function Son (name, age) {
 Son.prototype.getAge = function () {
   return this.age;
 }
-// TODO Object.create的意义
 Son.prototype.__proto__ = Object.create(Parent.prototype);
 const son1 = new Son(1, 18);
 ```
@@ -179,7 +178,9 @@ class EventEmitter {
 ```
 怎么理解发布订阅者和观察者的区别呢 ？
 
-其实发布订阅者模式只有一个中间者，好像啥事情都需要它亲自来做。而且仔细观察的话，发布订阅者模式会存在一个事件名和事件的对应关系，今天可以发布天气预报，只有订阅了天气预报的才会被通知，订阅了 KFC疯狂星期四闹钟事件 的不会被提醒。
+其实发布订阅者模式只有一个中间者，好像啥事情都需要它亲自来做。而且仔细观察的话，
+发布订阅者模式会存在一个事件名和事件的对应关系，今天可以发布天气预报，
+只有订阅了天气预报的才会被通知，订阅了 KFC疯狂星期四闹钟事件 的不会被提醒。
 
 而观察者模式，等被观察者发出了一点动静（执行notify），所有观察者都会被通知。
 ## 节流
