--- a/_posts/CSS/2022-11-07-at-rule.md
+++ b/_posts/CSS/2022-11-07-at-rule.md
@@ -3,7 +3,7 @@ layout:     post
 title:      at rule
 subtitle:   
 date:       2022-11-07
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
