--- a/_posts/JavaScript/事件/2023-1-10-鼠标拖拽.md
+++ b/_posts/JavaScript/事件/2023-1-10-鼠标拖拽.md
@@ -3,7 +3,7 @@ layout:     post
 title:      鼠标拖拽
 subtitle:   
 date:       2023-1-10
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
