--- a/_posts/JavaScript/事件/2023-1-12-复制粘贴事件.md
+++ b/_posts/JavaScript/事件/2023-1-12-复制粘贴事件.md
@@ -3,7 +3,7 @@ layout:     post
 title:      复制粘贴事件
 subtitle:   
 date:       2023-1-12
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
