--- a/_posts/小程序/2022-11-07-小程序查漏补缺.md
+++ b/_posts/小程序/2022-11-07-小程序查漏补缺.md
@@ -3,7 +3,7 @@ layout:     post
 title:      小程序查漏补缺
 subtitle:   
 date:       2022-11-06
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
