--- a/_posts/网络/2023-1-30-cookie.md
+++ b/_posts/网络/2023-1-30-cookie.md
@@ -3,7 +3,7 @@ layout:     post
 title:      cookie
 subtitle:   
 date:       2023-1-30
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
