--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -1,9 +1,9 @@
 ---
 layout:     post
-title:      面试题整理
+title:      面试题
 subtitle:   
 date:       2022-11-05
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
@@ -25,15 +25,18 @@ ViewModel它的主要职责就是：
 当然，它还有两个主要部分组成
 - 监听器（Observer）：对所有数据的属性进行监听
 - 解析器（Compiler）：对每个元素节点的指令进行扫描跟解析,根据指令模板替换数据,以及绑定相应的更新函数
+
 2. 组件化
 组件化就是把视图和非视图的各种逻辑均抽象为一个统一的概念来实现开发的模式，在Vue中每一个.vue文件都可以视为一个组件。
 优点是降低了系统耦合度，方便调试和提高了可维护性。
 3. 指令系统
 指令是带有 v- 前缀的特殊属性，当对应的表达式发生变化，会作用到DOM上。
+
 > MVC
 > Model：数据模型，用来存储数据
 > View：视图界面，用来展示UI界面和响应用户交互
 > Controller：控制器(大管家角色)，监听模型数据的改变和控制视图行为、处理用户交互
+
 ### 什么是SPA
 SPA就是单页应用。通过动态重写当前页面与用户交互，避免了页面之间切换而频繁刷新。
 ### SPA和MPA区别
@@ -66,6 +69,13 @@ history.replaceState修改浏览器历史纪录中当前纪录
 history.popState 当 history 发生变化时触发
 通过history.pushState方法改变地址栏。仅改变url和增加到历史记录中，不会向服务器发起请求。
 改变会触发popstate事件。调用pushState和replaceState不会触发这个事件。只有点击浏览器的前进，后退，调用history.back和history.forward的时候才会触发。
+#### Vue中hash模式和history模式的区别
+- 在显示上，hash模式的URL中会夹杂着#号，而history没有。
+- 实现方式不同。hash模式是依靠hashchange事件，而history模式是主要是依靠的HTML5 history中新增的两个方法pushState和replaceState。
+- 当真正需要通过URL向后端发送HTTP请求的时候，比如常见的用户手动输入URL后回车，或者是刷新(重启)浏览器，这时候history模式需要后端的支持。
+因为history模式下，前端的URL必须和实际向后端发送请求的URL一致，例如有一个URL是带有路径path的(例如www.lindaidai.wang/blogs/id)，
+如果后端没有对这个路径做处理的话，就会返回404错误。所以需要后端增加一个覆盖所有情况的候选资源，一般会配合前端给出的一个404页面。
+
 ### 如何给SPA做SEO优化
 1. 服务端渲染，如nuxt
 2. 静态化
@@ -73,12 +83,15 @@ history.popState 当 history 发生变化时触发
 （1）一种是通过程序将动态页面抓取并保存为静态页面，这样的页面的实际存在于服务器的硬盘中
 （2）另外一种是通过WEB服务器的 URL Rewrite的方式，它的原理是通过web服务器内部模块按一定规则将外部的URL请求转化为内部的文件地址，一句话来说就是把外部请求的静态地址转化为实际的动态页面地址，而静态页面实际是不存在的。这两种方法都达到了实现URL静态化的效果
 3. 使用Phantomjs针对爬虫处理
+
 ### vue实例挂载发生了什么
 1. 调用init初始化方法数据
 2. 调用$mount挂载，render方法生成虚拟DOM，update方法将虚拟DOM转为真实DOM并渲染。
+
 ### SPA首屏加载速度慢
 1. 首屏时间计算：new Date.getTime() - performance.timing.navigationStart（在body标签后计算）
-2. 白屏时间静思园：在<head>标签前面加一个<script>标签，里面加入上面相同代码。
+2. 白屏时间计算：在<head>标签前面加一个<script>标签，里面加入上面相同代码。
+
 #### 加载慢的原因
 网络延时
 资源体积
@@ -102,6 +115,17 @@ DNS预解析
 - $parent 或$root
 - attrs 与 listeners
 - Provide 与 Inject
+
+### vue的优缺点
+优点：
+- 响应式。不用操作 DOM，把精力更多放在业务逻辑。
+- 组件化。可复用部分可以抽离做成组件，提高开发效率，项目可维护性更高。
+- 虚拟DOM。性能提升
+
+缺点：
+- 不利于SEO
+- 导航不可用，需要自己实现前进后退。
+- 初次加载耗时较长
 
 ## css
 ### 水平居中
@@ -285,7 +309,21 @@ transform scale
 
 参数是hidden时候，溢出隐藏。
 
+### 如何解决a标点击后hover事件失效的问题
+改变a标签css属性的排列顺序
+
+只需要记住LoVe HAte原则就可以了：
+
+`link(一般省略成a)→visited→hover→active`
+
 ## JS
+### 点击一个input依次触发的事件
+`
+'onmouseenter'
+'onmousedown'
+'onfocus'
+'onclick'
+`
 ### 闭包是什么
 每个函数都有对应的词法环境，记录了变量和对外部词法环境引用。代码要访问变量时，会先搜索内部词法环境，找不到再搜索外部环境，直至全局词法环境。
 
