--- a/_posts/面试/2022-11-12-手写题.md
+++ b/_posts/面试/2022-11-12-手写题.md
@@ -3,7 +3,7 @@ layout:     post
 title:      手写题
 subtitle:   
 date:       2022-11-12
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
