--- a/_posts/2022-10-30-写作.md
+++ b/_posts/2022-10-30-写作.md
@@ -3,7 +3,7 @@ layout:     post
 title:      写作
 subtitle:   
 date:       2022-10-30
-author:     sq
+author:     
 header-img: img/post-bg-ios9-web.jpg
 catalog: true
 tags:
