--- a/_posts/2022-12-6-计算机基础.md
+++ b/_posts/2022-12-6-计算机基础.md
@@ -3,7 +3,7 @@ layout:     post
 title:      计算机基础
 subtitle:   
 date:       2022-12-6
-author:     sq
+author:     
 header-img:
 catalog: true
 tags:
