--- a/_posts/2023-1-3-Web安全.md
+++ b/_posts/2023-1-3-Web安全.md
@@ -3,7 +3,7 @@ layout:     post
 title:      Web安全
 subtitle:   
 date:       2023-1-3
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
