--- a/_posts/CSS/2022-12-14-css查漏补缺.md
+++ b/_posts/CSS/2022-12-14-css查漏补缺.md
@@ -3,7 +3,7 @@ layout:     post
 title:      css查漏补缺
 subtitle:   
 date:       2022-12-14
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
