--- a/_posts/HTML/2022-11-08-HTML查漏补缺.md
+++ b/_posts/HTML/2022-11-08-HTML查漏补缺.md
@@ -3,7 +3,7 @@ layout:     post
 title:      HTML查漏补缺
 subtitle:   
 date:       2022-11-08
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
