--- a/_posts/HTML/2022-11-15-语义.md
+++ b/_posts/HTML/2022-11-15-语义.md
@@ -3,7 +3,7 @@ layout:     post
 title:      HTML语义
 subtitle:   
 date:       2022-11-15
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
