--- a/_posts/JavaScript/2022-11-09-服务端渲染.md
+++ b/_posts/JavaScript/2022-11-09-服务端渲染.md
@@ -3,7 +3,7 @@ layout:     post
 title:      服务端渲染
 subtitle:   
 date:       2022-11-09
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
