--- a/_posts/JavaScript/2022-11-13-内存管理.md
+++ b/_posts/JavaScript/2022-11-13-内存管理.md
@@ -3,7 +3,7 @@ layout:     post
 title:      JS中的内存管理
 subtitle:   
 date:       2022-11-13
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
