--- a/_posts/JavaScript/2022-11-14-动态导入.md
+++ b/_posts/JavaScript/2022-11-14-动态导入.md
@@ -3,7 +3,7 @@ layout:     post
 title:      动态导入
 subtitle:   
 date:       2022-11-14
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
