--- a/_posts/JavaScript/2022-11-14-复制黏贴.md
+++ b/_posts/JavaScript/2022-11-14-复制黏贴.md
@@ -3,7 +3,7 @@ layout:     post
 title:      复制黏贴
 subtitle:   
 date:       2022-11-14
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
