--- a/_posts/JavaScript/2022-11-26-this.md
+++ b/_posts/JavaScript/2022-11-26-this.md
@@ -3,7 +3,7 @@ layout:     post
 title:      this
 subtitle:   
 date:       2022-11-26
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
