--- a/_posts/JavaScript/事件/2022-12-26-事件.md
+++ b/_posts/JavaScript/事件/2022-12-26-事件.md
@@ -3,7 +3,7 @@ layout:     post
 title:      事件
 subtitle:   
 date:       2022-12-26
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
