--- a/_posts/JavaScript/事件/2023-1-3-自定义事件.md
+++ b/_posts/JavaScript/事件/2023-1-3-自定义事件.md
@@ -3,7 +3,7 @@ layout:     post
 title:      自定义事件
 subtitle:   
 date:       2023-1-3
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
