--- a/_posts/JavaScript/原型、类/2022-11-26-JS中的原型.md
+++ b/_posts/JavaScript/原型、类/2022-11-26-JS中的原型.md
@@ -3,7 +3,7 @@ layout:     post
 title:      JS中的原型
 subtitle:   
 date:       2022-11-26 16:00:00
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
