--- a/_posts/JavaScript/类型/2022-11-15-类型.md
+++ b/_posts/JavaScript/类型/2022-11-15-类型.md
@@ -3,7 +3,7 @@ layout:     post
 title:      类型
 subtitle:   
 date:       2022-11-15
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
