--- a/_posts/Vue/2022-11-12-模板编译.md
+++ b/_posts/Vue/2022-11-12-模板编译.md
@@ -3,7 +3,7 @@ layout:     post
 title:      模板编译
 subtitle:   
 date:       2022-11-12
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
