--- a/_posts/工程化/2022-11-09-webpack.md
+++ b/_posts/工程化/2022-11-09-webpack.md
@@ -3,7 +3,7 @@ layout:     post
 title:      webpack
 subtitle:   
 date:       2022-11-08
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
