--- a/_posts/工程化/2022-12-3-组件库.md
+++ b/_posts/工程化/2022-12-3-组件库.md
@@ -3,7 +3,7 @@ layout:     post
 title:      组件库
 subtitle:   
 date:       2022-12-3
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
