--- a/_posts/浏览器/2023-1-21-页面生命周期.md
+++ b/_posts/浏览器/2023-1-21-页面生命周期.md
@@ -3,7 +3,7 @@ layout:     post
 title:      页面生命周期
 subtitle:   
 date:       2023-1-21
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
