--- a/_posts/浏览器/2023-1-24-浏览器缓存机制.md
+++ b/_posts/浏览器/2023-1-24-浏览器缓存机制.md
@@ -3,7 +3,7 @@ layout:     post
 title:      浏览器缓存机制
 subtitle:   
 date:       2023-1-24
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
