--- a/_posts/浏览器/2023-1-29-资源加载.md
+++ b/_posts/浏览器/2023-1-29-资源加载.md
@@ -3,7 +3,7 @@ layout:     post
 title:      资源加载
 subtitle:   
 date:       2023-1-29
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
