--- a/_posts/浏览器/2023-2-1-事件循环.md
+++ b/_posts/浏览器/2023-2-1-事件循环.md
@@ -3,7 +3,7 @@ layout:     post
 title:      事件循环
 subtitle:   
 date:       2023-2-1
-author:     sq
+author:     
 header-img: 
 catalog: true
 tags:
