--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -317,6 +317,11 @@ transform scale
 `link(一般省略成a)→visited→hover→active`
 
 ## JS
+### null 和 undefined 区别
+- null 表示空，此处不应该有值；而 undefined 表示未定义，变量声明了未赋值就是 undefined。
+- 转换数字结果不同。Number(null)为0，undefined 为 NaN。
+- null 是对象原型链终点
+
 ### 点击一个input依次触发的事件
 `
 'onmouseenter'
