--- a/_posts/HTML/2022-11-15-语义.md
+++ b/_posts/HTML/2022-11-15-语义.md
@@ -41,28 +41,41 @@ section的嵌套会使得其中的h1-h6下降一级，因此，在HTML5以后，
 
 ## 结构语义化
 应用了语义化结构的页面，可以明确地提示出页面信息的主次关系，它能让浏览器很好地支持“阅读视图功能”，还可以让搜索引擎的命中率提升，同时，它也对视障用户的读屏软件更友好。
-> 当你觉得使用其它标签都不太合适的时候，<div>标签依然是可用的。
+> 当你觉得使用其它标签都不太合适的时候，`<div>`标签依然是可用的。
 
 ### header
-<header> 元素有两种用法，第一是标注内容的标题，第二是标注网页的页眉，如上图你看到的那样。除非必要（内容标题附带其它信息的情况下：发布时间、作者等），一般不在内容中使用 <header> 。
-因而，网页中可以包含多个 <header> 元素。按照 HTML5 的规定，<header> 都应包含某个级别的标题。
+`<header>` 元素有两种用法，第一是标注内容的标题，第二是标注网页的页眉，如上图你看到的那样。除非必要（内容标题附带其它信息的情况下：发布时间、作者等），一般不在内容中使用 <header> 。
+因而，网页中可以包含多个 `<header>` 元素。按照 HTML5 的规定，<header> 都应包含某个级别的标题。
+
 ### 导航栏
 一个页面可以包含多个 <nav> 元素，但通常仅仅在页面的主要导航部分使用它。
 导航通常包含一组链接，普遍认为，链接使用列表来组织。
+```html
+<nav>
+  <ul>
+    <li><a href="#" title="链接">链接</a></li>
+    <li><a href="#" title="链接">链接</a></li>
+    <li><a href="#" title="链接">链接</a></li>
+  </ul>
+</nav>
+```
+
 ### 附注
-<aside> 元素并不仅仅是侧栏，它表示与它周围文本没有密切关系的内容。文章中同样可以使用 <aside> 元素，来说明文章的附加内容、解释说明某个观点、相关内容链接等等。
-当<aside>用于侧栏时，其表示整个网页的附加内容。通常的广告区域、搜索、分享链接则位于侧栏。
+`<aside>` 元素并不仅仅是侧栏，它表示与它周围文本没有密切关系的内容。文章中同样可以使用 `<aside>` 元素，来说明文章的附加内容、解释说明某个观点、相关内容链接等等。
+当`<aside>`用于侧栏时，其表示整个网页的附加内容。通常的广告区域、搜索、分享链接则位于侧栏。
+
 ### 主要内容
-HTML5.1 中规定了一个<main>标签来标识主体内容。<main>标签不能包含在页面其它区块元素中，通常是<body>的子标签，或者是全局<div>的子标签。<main>标签可以帮助屏幕阅读工具识别页面的主体部分，从而让访问者迅速得到有用的信息。
+HTML5.1 中规定了一个`<main>`标签来标识主体内容。`<main>`标签不能包含在页面其它区块元素中，通常是`<body>`的子标签，或者是全局`<div>`的子标签。`<main>`标签可以帮助屏幕阅读工具识别页面的主体部分，从而让访问者迅速得到有用的信息。
+
 ### 区域
-<section> 标签适合标记的内容区块：
+`<section>` 标签适合标记的内容区块：
 - 与页面主体并列显示的小内容块。
 - 独立性内容，清单、表单等。
 - 分组内容，如 CMS 系统中的文章分类区块。
 - 比较长文档的一部分，可能仅仅是为了正确规定页面大纲。
 
 ### 文章
-<article> 表示一个完整的、自成一体的内容块。如文章或新闻报道。<article> 应包含完整的标题、文章署名、发布时间、正文。当语义与表现发生冲突，例如有时需要将文章分多个页面显示，那么需要把每个页面的文章区域都用 <article> 标记。
+`<article>` 表示一个完整的、自成一体的内容块。如文章或新闻报道。所以，article和body具有相似的结构。`<article>` 应包含完整的标题、文章署名、发布时间、正文。当语义与表现发生冲突，例如有时需要将文章分多个页面显示，那么需要把每个页面的文章区域都用 <article> 标记。
 
 文章中包含插图时，使用新的语义元素 <figure> 标签。例如：
 ```html
@@ -77,30 +90,7 @@ HTML5.1 中规定了一个<main>标签来标识主体内容。<main>标签不能
   </figure>
 </article>
 ```
-上述情况下，<figcaption>包含了关于插图的详细解释，则<img>的alt属性可以略去。
-### 页脚
-标准规定<footer>标签仅仅可以包含版权、来源信息、法律限制等等之类的文本或链接信息。
-如果想要在页脚中包含其它内容，可以使用熟悉的<div>来帮忙。
-一个典型的body类似这样：
-```html
-<body>
-    <header>
-        <nav></nav>
-    </header>
-    <aside>
-        <nav></nav>
-    </aside>
-    <main>
-        <section>……</section>
-        <section>……</section>
-        <section>……</section>
-    </main>
-    <footer>
-        <address>……</address>
-    </footer>
-</body>
-```
-除此之外，还有article，article是一种特别的结构，它表示具有一定独立性质的文章。所以，article和body具有相似的结构，同时，一个HTML页面中，可能有多个article存在。
+上述情况下，`<figcaption>`包含了关于插图的详细解释，则`<img>`的alt属性可以略去。
 
 一个典型的场景是多篇新闻展示在同一个新闻专题页面中，这种类似报纸的多文章结构适合用article来组织。
 ```html
@@ -124,6 +114,30 @@ HTML5.1 中规定了一个<main>标签来标识主体内容。<main>标签不能
     </footer>
 </body>
 ```
+
+### 页脚
+标准规定`<footer>`标签仅仅可以包含版权、来源信息、法律限制等等之类的文本或链接信息。
+如果想要在页脚中包含其它内容，可以使用熟悉的`<div>`来帮忙。
+一个典型的body类似这样：
+```html
+<body>
+    <header>
+        <nav></nav>
+    </header>
+    <aside>
+        <nav></nav>
+    </aside>
+    <main>
+        <section>……</section>
+        <section>……</section>
+        <section>……</section>
+    </main>
+    <footer>
+        <address>……</address>
+    </footer>
+</body>
+```
+
 标签的介绍：
 - header，如其名，通常出现在前部，表示导航或者介绍性的内容。
 - footer，通常出现在尾部，包含一些作者信息、相关链接、版权信息等。
