--- a/_posts/网络/2023-1-30-Cookie.md
+++ b/_posts/网络/2023-1-30-Cookie.md
@@ -1,15 +1,15 @@
 ---
 layout:     post
-title:      cookie
+title:      Cookie
 subtitle:   
 date:       2023-1-30
 author:     
 header-img: 
 catalog: true
 tags:
-    - cookie
+    - Cookie
 ---
-# cookie
+# Cookie
 作为一段一般不超过 4KB 的小型文本数据，它由一个名称（Name）、一个值（Value）和其它几个用于控制 Cookie 有效期、安全性、使用范围的可选属性组成。
 
 ## Cookie 的查看
@@ -60,7 +60,7 @@ Domain 和 Path 标识共同定义了 Cookie 的作用域：即 Cookie 应该发
 标记为 Secure 的 Cookie 只应通过被HTTPS协议加密过的请求发送给服务端。使用 HTTPS 安全协议，可以保护 Cookie 在浏览器和 Web 服务器间的传输过程中不被窃取和篡改。
 
 ### HTTPOnly
-设置 HTTPOnly 属性可以防止客户端脚本通过 document.cookie 等方式访问 Cookie，有助于避免 XSS 攻击。
+设置 HTTPOnly 属性可以防止客户端脚本通过 document.Cookie 等方式访问 Cookie，有助于避免 XSS 攻击。
 
 ### SameSite
 SameSite 属性可以让 Cookie 在跨站请求时不会被发送，从而可以阻止跨站请求伪造攻击（CSRF）。
@@ -83,9 +83,9 @@ SameSite 可以有下面三种值：
 #### 三种值之间的区别
 有七种请求类型：a 标签的 href，预加载link prerender，get 表单，post 表单，iframe ajax 和 img 标签。
 
-- strict：都不携带 cookie
-- None：都携带 cookie
-- Lax：只有a 标签，预加载和 get 表单携带 cookie。
+- strict：都不携带 Cookie
+- None：都携带 Cookie
+- Lax：只有a 标签，预加载和 get 表单携带 Cookie。
 
 有两点要注意的地方：
 - HTTP 接口不支持 SameSite=none
