--- a/_posts/HTML/2022-11-15-语义.md
+++ b/_posts/HTML/2022-11-15-语义.md
@@ -169,3 +169,6 @@ Host: www.example.org
 </samp></pre>
 ```
 ![img.png](/img/标签语义说明.png)
+
+## 资料
+[HTML元素参考](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element)
