--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -149,7 +149,49 @@ history.popState 当 history 发生变化时触发
 - 导航不可用，需要自己实现前进后退。
 - 初次加载耗时较长
 
+### 指令
+
+### 响应式原理
+
+#### 数组的处理
+
+### key, diff算法
+
+
 ## css
+### 层叠上下文
+当 z-index 为数值并且生效的时候，容器会发生一种变化，会使得容器内的子组件无法穿过容器本身，并且子组件的层级由父组件决定。这种变化后的容器元素我们称之为层叠上下文。
+
+特性：
+- 层叠上下文可以嵌套，内部层叠上下文及其所有子元素均受制于外部的层叠上下文。
+- 每个层叠上下文和兄弟元素独立，也就是当进行层叠变化或渲染的时候，只需要考虑后代元素。
+- 层叠上下文未指定 z-index 时（css3创建的层叠上下文），其层叠等级与 z-index : 0 相同， 要比普通元素高。指定 z-index 时按照层叠规则来。
+
+创建方式：
+- 页面根元素
+- z-index 值为数值的定位元素
+> 1、z-index: auto 和 z-index: 0 在层叠等级上属于同一级。但是 z-index: 0 就是符合这一条“z-index 为数值”会使得元素升级为层叠上下文。
+2、IE6，7 有个不合常理的地方，就是当元素的 z-index 为 auto 的时候，该元素也升级为创建层叠上下文。
+- CSS3 属性。
+  - z-index 值不为 auto 的 flex 项(父元素 display : flex | inline-flex )
+  - 元素的 opacity 值不是 1
+  - 元素的 transform 值不是 none
+  - 元素的 filter 值不是 none
+  - 其他
+
+两个概念：
+- 层叠顺序（ Stacking Order ），这个其实就是很字面的意思，它表示元素发生层叠时按照特定的顺序规则在 Z 轴上垂直显示顺序。
+- 层叠等级（ Stacking Level ），这个很好理解了。层叠等级就是个描述元素层叠顺序的一个名词，它决定了同一个层叠上下文中元素在 Z 轴上的显示顺序。举个例子：A 元素与 B 元素重叠之后，A 元素在 B 元素上面。那么我们就可以直接说 A 元素的层叠等级大于 B 元素的层叠等级。
+
+层叠规则：
+- 当互相层叠的元素都是层叠上下文元素，即明确的有 z-index 值的时候（没有明确的 z-index 值的层叠上下文也就是 CSS3 创建的层叠上下文 z-index 值为0 ）直接比较 z-index 的值，值大的处在值小的元素的上方。
+- 当元素处于同一层叠上下文内时可按照如下规则进行层叠判断。
+![img.png](/img/层叠上下文.png)
+- 当元素的层叠等级一致、层叠顺序也相同的时候，在 DOM 流中处于后面的元素会覆盖前面的元素。
+
+### flex布局
+
+
 ### 水平居中
 - text-align: center。居中子元素为行内或行内块适用。
 - margin: auto + width。居中元素需要设置具体宽度。
@@ -475,6 +517,53 @@ iframe 元素会创建包含另一个文档的内联框架。
 ### 说一下RESTFUL
 用 URL 定位资源，用 HTTP 描述操作。
 
+### 浏览器的渲染
+浏览器渲染大致分为五步，创建 DOM 树，创建 styleRules，创建 render 树，布局 layout 和绘制 Painting。
+1. 分析 HTML 元素，构建一颗 DOM 树。
+2. 分析 css 文件和元素内联样式，生成页面样式表。
+3. 将 DOM 树和样式表关联起来，构建一颗 render 树。
+4. 浏览器根据 render 树开始布局，确定每个节点的坐标。
+5. 根据 render 树和节点坐标，绘制节点。
+
+DOM 树的构建是一个渐进过程，不必等到文档加载完成才开始。
+
+render树也不是等到 DOM 树和 cssom 树构建完毕才开始构建。三者互有交叉，一边加载，一边解析，一边渲染。
+
+css 的解析是从右往左逆向解析的。
+
+### 渲染进程下的线程
+- GUI渲染线程：负责渲染浏览器界面，解析html,css,DOM Tree, render Tree ，layout,绘制等
+- js引擎线程：解析js脚本，运行代码
+- 事件触发线程：用于控制事件轮询，鼠标点击，AJAX异步请求等，对应任务会被添加到事件触发线程中，符合触发条件时，事件会被添加到任务队列等待JS引擎处理
+- 定时器触发线程：定时器setInterval 和 setTimeout
+- http请求线程：用于http请求
+
+### v8的垃圾回收
+将内存分为了 new space 和 old space。
+
+#### new space
+new space 分为 from space 和 to space。
+
+回收算法：
+
+首先v8引擎检测到 from space 空间快达到上线了，就会进行垃圾回收。
+
+其次从根部开始遍历，不可达对象被标记，可达对象被复制到 to space。
+
+最后清除 from space 数据，将 to space变成 from space，from space 变成 to space。
+
+可达对象会被放到 old space中的 old object space。
+
+#### old space
+old space 分为以下几个区域：
+- old object space。新生代晋升来的
+- large object space。大对象存储区域。
+- map space。存储对象映射关系。
+- code space。存放编译后代码的地方。
+
+回收算法：
+从根部对象深度有限遍历标记，标记完成后等待垃圾回收器清理。清除了以后如果新生代对象被放到 old object space 时内存不足，就会触发 mark-compact，释放内存空间。
+
 ### click 在 ios 上有 300ms 延迟，原因及如何解决？
 1. 禁用缩放
 
@@ -679,3 +768,6 @@ ws.on('close', (code, reason) => {
 [面试官：请设计一个不能操作 DOM 和调接口的环境](https://juejin.cn/post/7157570429928865828)
 
 [用nodejs手写websocket](https://mp.weixin.qq.com/s/EWE6vIvwWDJ_A6SqikV6Tg)
+
+[chrome浏览器渲染进程工作流程](https://juejin.cn/post/6962087948112101383)
+
