--- a/_posts/面试/2022-11-12-手写题.md
+++ b/_posts/面试/2022-11-12-手写题.md
@@ -461,5 +461,32 @@ Function.prototype.defer = function(ms) {
   }
 };
 ```
+
+## compose
+函数的嵌套调用变成了线性
+```javascript
+function compose(...funcs) {
+  return funcs
+    .reverse()
+    .reduce((fn1, fn2) => (...args) => fn2(fn1(...args)));
+}
+```
+
+## pipe
+```javascript
+function pipe(...args) {
+  return result => {
+    const funcs = [...args];
+    while(funcs.length > 0) {
+      result = funcs.shift()(result);
+    }
+    return result;
+  };
+}
+
+// 等价于
+const reverseArgs = func => (...args) => func(...args.reverse());
+const pipe = reverseArgs(compose);
+```
 ## 资料
 [20行实现 Promise](https://juejin.cn/post/6844904094079926286)
